recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:19: error: '<-' expected but ')' found.
  for(a to a < 3)
                ^FourSquare:24: error: illegal start of simple expression
} 
^